force-app/main/default/objects/Country__c/fields/CountryNumber__c.field-meta.xml
<CustomField>
    <fullName>CountryNumber__c</fullName>
    <label>Country Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>