force-app/main/default/objects/Country__c/fields/Embargoed__c.field-meta.xml
<CustomField>
    <fullName>Embargoed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Tick this checkbox if this country is embargoed. It will restrict users not to create Routes for this Country</description>
    <label>Embargoed</label>
    <type>Checkbox</type>
</CustomField>