force-app/main/default/objects/Country__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CountryCode__c</columns>
    <columns>Zone__c</columns>
    <columns>Embargoed__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>